--- a/src/capobianco.html
+++ b/src/capobianco.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tris 😊</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    ...tris...
+    Tris TrisTris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris v Tris Tris v Tris Tris Tris Tris
+    <div class="grid-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>  
+        <div class="grid-item">4</div>
+        <div class="grid-item">5</div>
+        <div class="grid-item">6</div>  
+        <div class="grid-item">7</div>
+      </div>
 </body>
 </html>
