--- a/src/capobianco.html
+++ b/src/capobianco.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Tris TrisTris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris Tris v Tris Tris v Tris Tris Tris Tris
+    Tris
     <div class="grid-container">
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
@@ -17,6 +17,8 @@
         <div class="grid-item">5</div>
         <div class="grid-item">6</div>  
         <div class="grid-item">7</div>
+        <div class="grid-item">8</div>  
+        <div class="grid-item">9</div>
       </div>
 </body>
 </html>
