--- a/src/capobianco.html
+++ b/src/capobianco.html
@@ -10,15 +10,15 @@
 <body>
     Tris
     <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>  
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>  
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>  
-        <div class="grid-item">9</div>
+        <div class="grid-item"><span></span></div>
+        <div class="grid-item"><span></span></div>
+        <div class="grid-item"><span></span></div>
+        <div class="grid-item"><span></span></div>
+        <div class="grid-item"><span>X</span></div>
+        <div class="grid-item"><span></span></div>
+        <div class="grid-item"><span></span></div>
+        <div class="grid-item"><span></span></div>
+        <div class="grid-item"><span></span></div>
       </div>
 </body>
 </html>
