--- a/src/cross-circle.html
+++ b/src/cross-circle.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +13,20 @@
             width: 30px;
             border-radius: 1px;
         }
+
         #cross {
             margin-top: 20px;
         }
-        #line-a{
+
+        #line-a {
             transform: rotate(45deg);
         }
+
         #line-b {
-            transform:   translateY(-100%) rotate(-45deg);
+            transform: translateY(-100%) rotate(-45deg);
 
         }
+
         .circle {
             margin-top: 20px;
             border-radius: 50%;
@@ -32,10 +37,13 @@
         }
     </style>
 </head>
+
 <body>
-    <div id="cross"></div>
-    <div class="line" id="line-a"></div>
-    <div class="line" id="line-b"></div>
+    <div id="cross">
+        <div class="line" id="line-a"></div>
+        <div class="line" id="line-b"></div>
+    </div>
     <div class="circle"></div>
 </body>
+
 </html>
