Fix cross class

--- a/src/cross-circle.html
+++ b/src/cross-circle.html
@@ -14,7 +14,7 @@
             border-radius: 1px;
         }
 
-        #cross {
+        .cross {
             margin-top: 20px;
         }
 
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-    <div id="cross">
+    <div class="cross">
         <div class="line" id="line-a"></div>
         <div class="line" id="line-b"></div>
     </div>
