--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,15 @@
 <body>
     Tris
     <div class="grid-container">
-        <div class="grid-item" onclick="play(0,0)"><span></span></div>
-        <div class="grid-item"  onclick="play(0,1)"><span></span></div>
-        <div class="grid-item"  onclick="play(0,2)"><span></span></div>
-        <div class="grid-item"><span></span></div>
-        <div class="grid-item"><span></span></div>
-        <div class="grid-item">
-            <span class="cross">
-                <div class="cross-line cross-line-a"></div>
-                <div class="cross-line cross-line-b"></div>
-            </span>
-        </div>
-        <div class="grid-item"><span></span></div>
-        <div class="grid-item"><span></span></div>
-        <div class="grid-item"><span></span></div>
-        <div class="grid-item"><span></span></div>
+        <div class="grid-item" id="item-0-0" onclick="play(0,0)"></div>
+        <div class="grid-item" onclick="play(0,1)"></div>
+        <div class="grid-item" onclick="play(0,2)"></div>
+        <div class="grid-item" onclick="play(1,0)"></div>
+        <div class="grid-item" onclick="play(1,1)"></div>
+        <div class="grid-item" onclick="play(1,2)"></div>
+        <div class="grid-item" onclick="play(2,0)"></div>
+        <div class="grid-item" onclick="play(2,1)"></div>
+        <div class="grid-item" onclick="play(2,2)"></div>
       </div>
 
     <script src="script.js"></script>
