Change the inner HTML of a clicked element

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
     Tris
     <div class="grid-container">
         <div class="grid-item" id="item-0-0" onclick="play(0,0)"></div>
-        <div class="grid-item" onclick="play(0,1)"></div>
-        <div class="grid-item" onclick="play(0,2)"></div>
-        <div class="grid-item" onclick="play(1,0)"></div>
-        <div class="grid-item" onclick="play(1,1)"></div>
-        <div class="grid-item" onclick="play(1,2)"></div>
-        <div class="grid-item" onclick="play(2,0)"></div>
-        <div class="grid-item" onclick="play(2,1)"></div>
-        <div class="grid-item" onclick="play(2,2)"></div>
+        <div class="grid-item" id="item-0-1" onclick="play(0,1)"></div>
+        <div class="grid-item" id="item-0-2" onclick="play(0,2)"></div>
+        <div class="grid-item" id="item-1-0" onclick="play(1,0)"></div>
+        <div class="grid-item" id="item-1-1" onclick="play(1,1)"></div>
+        <div class="grid-item" id="item-1-2" onclick="play(1,2)"></div>
+        <div class="grid-item" id="item-2-0" onclick="play(2,0)"></div>
+        <div class="grid-item" id="item-2-1" onclick="play(2,1)"></div>
+        <div class="grid-item" id="item-2-2" onclick="play(2,2)"></div>
       </div>
 
     <script src="script.js"></script>
