--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tris 😊</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     Tris
@@ -21,6 +21,6 @@
         <div class="grid-item" id="item-2-2" onclick="play(2,2)"></div>
       </div>
 
-    <script src="script.js"></script>
+    <script src="static/script-web.js"></script>
 </body>
 </html>
